# seo-dungeon

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  THIRD-PARTY-NOTICES.md  install.ps1  install.sh  pyproject.toml  requirements.txt  uninstall.ps1  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml  hol-plugin-scanner.yml  v2.yml
agents/: seo-backlinks.md  seo-dataforseo.md  seo-geo.md  seo-local.md  seo-maps.md
agents-codex/: seo-backlinks.toml  seo-dataforseo.toml  seo-ecommerce.toml  seo-firecrawl.toml  seo-flow.toml  seo-geo.toml  seo-google.toml  seo-image-gen.toml  seo-local.toml  seo-maps.toml
docs/: ARCHITECTURE.md  COMMANDS.md  INSTALLATION.md  MCP-INTEGRATION.md  RELEASE-v2.2.16.md  TROUBLESHOOTING.md
dungeon/: index.html  launch.js  package-lock.json  package.json  vite.config.js
dungeon/public/: seo-dungeon-runtime-config.js
dungeon/scripts/: record-remote-demo.mjs  (+5 more)
scripts/: backlinks_auth.py  dataforseo_api.py  firecrawl_api.py  google_auth.py  google_report.py  portability_check.py  release_sign.py  seo_updates.py  sync_flow.py
tests/: test_content_quality.py  test_extension_installer_injection.py  test_manifest_consistency.py  test_parasite_risk_and_extensions.py  test_portability.py  test_pyproject_metadata.py  test_sync_flow.py  test_url_safety.py
(+74 files in other folders)
