[project]
name = "seo-dungeon"
version = "1.9.0"
description = "Gamified 16-bit dungeon crawler that turns SEO audits into boss battles (SEO engine v1.9.0)"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/avalonreset/seo-dungeon"
Repository = "https://github.com/avalonreset/seo-dungeon"
